feat: adicionado iamgens para preenchemento de vazio. Fix: Container paddin

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/typography": "^0.5.13",
     "algoliasearch": "^4.23.3",
     "next": "14.2.4",
     "react": "^18",
